update small bugs for audio play, make logo smaller when click start so content not overlap each other

--- a/src/psyche/style.css
+++ b/src/psyche/style.css
@@ -229,6 +229,16 @@
   z-index: 10;
   padding: 2vh 2vh;
 }
+
+.psyche-small-logo{
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 10%;
+  z-index: 10;
+  padding: 2vh 2vh;
+}
+
 .title-container {
   /* width: 100%; */
   position: absolute;
